styles: fix header z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,7 @@ p {
     width: 100%;
     background: #fec63e;
     padding: 15px 0;
+    z-index: 10;
 }
 
 .header_menu {
